--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -1,10 +1,44 @@
 <html>
     <head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'hub/bootstrap/css/bootstrap.min.css' %}">
+        <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'hub/jquery/jquery-3.6.1.min.js' %}"></script>
 
     </head>
     <body>
         
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Little WMS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Manage</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Lists</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Statistics</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        {% block content %}
+
         
+
+        {% endblock %}
 
     </body>
 </html>
