--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -10,7 +10,7 @@
         
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Little WMS</a>
+                <a class="navbar-brand" href="/">Little WMS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -18,16 +18,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Dashboard</a>
+                            <a class="nav-link" href="#">Bewegen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Manage</a>
+                            <a class="nav-link" href="/manage">Verwalten</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Lists</a>
+                            <a class="nav-link" href="#">Listen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Statistics</a>
+                            <a class="nav-link">Statistiken</a>
                         </li>
                     </ul>
                 </div>
