--- a/django_project/hub/templates/hub/locations.html
+++ b/django_project/hub/templates/hub/locations.html
@@ -3,15 +3,21 @@
 {% block content %}
 
 {% for loc in locations %}
-<div>
-    <p>
-        {{loc}}
-    </p>
+<div class="container overflow-hidden">
+    <div class="card">
+        <div class="card-body">
+            
+            <p class="card-text">
+                {{loc.traditional_city}}
+            </p>
+        </div>
+    </div>
 </div>
 
 {% endfor %}
-
-<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addLocation">+</button>
+<div class="position-absolute bottom-0 end-0 m-3">
+    <button type="button" class="btn btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#addLocation">+</button>
+</div>
 
 
 <div class="modal fade" id="addLocation" tabindex="-1" aria-labelledby="addLocation" aria-hidden="true">
@@ -24,13 +30,13 @@
                 <form method="POST" action="/manage/locations">
                     {% csrf_token %}
                     {% for field in form %}
-                        <div class="mb-3">
+                        <div class="form-floating mb-3">
                             {{ field.error }}
-                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                             {{ field }}
+                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                         </div>
                     {% endfor %}
-                    <button type="submit" name="add">Hinzufügen</button>
+                    <button type="submit" class="btn btn-success" name="add">Hinzufügen</button>
                 </form>
             </div>
         </div>
