--- a/django_project/warehouse/templates/warehouse/storage.html
+++ b/django_project/warehouse/templates/warehouse/storage.html
@@ -7,7 +7,7 @@
         <div class="card-body">
 
             <p class="card-text">
-                {{part.traditional_city}}
+                {{part}}
             </p>
         </div>
     </div>
@@ -17,6 +17,7 @@
 
 {% endblock %}
 
+
 {% block form_header %}
-/manage/location
+/manage/storage
 {% endblock %}
