addet the storage and compartment adding

--- a/django_project/warehouse/templates/warehouse/storage.html
+++ b/django_project/warehouse/templates/warehouse/storage.html
@@ -7,7 +7,7 @@
         <div class="card-body">
 
             <p class="card-text">
-                {{part}}
+                {{part.prefix}}
             </p>
         </div>
     </div>
