--- a/django_project/hub/templates/hub/location.html
+++ b/django_project/hub/templates/hub/location.html
@@ -1,6 +1,7 @@
-{% extends "hub/list_view.html" %}
+{% extends "hub/header.html" %}
 
-{% block cards %}
+{% block content %}
+
 {% for part in list %}
 <div class="container overflow-hidden">
     <div class="card">
@@ -12,11 +13,12 @@
         </div>
     </div>
 </div>
-
 {% endfor %}
 
+{% include "hub/modal_button/plus.html" with name="location" %}
+
+{% include "hub/form_modal.html" with add="Standort Hinzufügen" action="/manage/" name="location" m_form=form %}
+
 {% endblock %}
 
-{% block form_header %}
-/manage/location
-{% endblock %}
+
