linked the location

--- a/django_project/hub/templates/hub/manage.html
+++ b/django_project/hub/templates/hub/manage.html
@@ -2,36 +2,50 @@
 
 {% block content %}
 
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
+<a  href="location">
+<div class="card" style="width: 18rem;" >
+    <div class="card-body stretched-link" >
         <h5 class="card-title">Standorte</h5>
-
     </div>
 </div>
+</a>
 
-<div class="card" style="width: 18rem;">
+
+
+<a  href="location">
+<div class="card" style="width: 18rem;" >
     <div class="card-body">
         <h5 class="card-title">Wahrenhäuser</h5>
     </div>
 </div>
+</a>
 
+
+<a  href="location">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Lager</h5>
     </div>
 </div>
+</a>
 
+
+<a  href="location">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Teile</h5>
     </div>
 </div>
+</a>
 
+
+<a  href="location">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Geräte</h5>
     </div>
 </div>
+</a>
 
 
 {% endblock %}
