changed the link witch gose to the part page

--- a/django_project/hub/templates/hub/manage.html
+++ b/django_project/hub/templates/hub/manage.html
@@ -30,7 +30,7 @@
 </a>
 
 
-<a  href="location">
+<a  href="part">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Teile</h5>
