--- a/django_project/hub/templates/hub/form_modal.html
+++ b/django_project/hub/templates/hub/form_modal.html
@@ -9,13 +9,21 @@
             <div class="modal-body">
                 <form method="POST" action="{{ action }}{{name}}">
                     {% csrf_token %}
-                    {% for field in m_form %}
-                        <div class="form-floating mb-3">
-                            {{ field.error }}
-                            {{ field }}
-                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                        </div>
-                    {% endfor %}
+
+                        {% for form in m_form %}
+
+
+                            {% for field in form %}
+                                <div class="form-floating mb-3">
+                                    {{ field.error }}
+                                    {{ field }}
+                                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                                </div>
+                            {% endfor %}
+
+
+                        {% endfor %}
+
                     <button type="submit" class="btn btn-success" name="add">Hinzufügen</button>
                 </form>
             </div>
