addet a close button to the form modal

--- a/django_project/hub/templates/hub/form_modal.html
+++ b/django_project/hub/templates/hub/form_modal.html
@@ -1,10 +1,9 @@
-
-
 <div class="modal fade" id="add{{ name }}" tabindex="-1" aria-labelledby="add{{name}}" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addLocationLabel">{{ add }}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form method="POST" action="{{ action }}{{name}}">
