--- a/django_project/hub/templates/hub/part.html
+++ b/django_project/hub/templates/hub/part.html
@@ -7,6 +7,6 @@
 
 {% include "hub/modal_button/plus.html" with name="part" %}
 
-{% include "hub/form_modal.html" with add="Teil Hinzufügen" action="/manage/" name="part" m_form=form %}
+{% include "hub/form_modal.html" with add="Teil Hinzufügen" action="/manage/" name="part" forms=form %}
 
 {% endblock %}
