--- a/django_project/hub/templates/hub/tag.html
+++ b/django_project/hub/templates/hub/tag.html
@@ -7,6 +7,6 @@
 
 {% include "hub/modal_button/plus.html" with name="tag" %}
 
-{% include "hub/form_modal.html" with add="Tag Hinzufügen" action="/manage/" name="tag" m_form=form %}
+{% include "hub/form_modal.html" with add="Tag Hinzufügen" action="/manage/" name="tag" forms=form %}
 
 {% endblock %}
