--- a/django_project/hub/templates/hub/location.html
+++ b/django_project/hub/templates/hub/location.html
@@ -17,7 +17,7 @@
 
 {% include "hub/modal_button/plus.html" with name="location" %}
 
-{% include "hub/form_modal.html" with add="Standort Hinzufügen" action="/manage/" name="location" m_form=form %}
+{% include "hub/form_modal.html" with add="Standort Hinzufügen" action="/manage/" name="location" forms=form %}
 
 {% endblock %}
 
