addet the Tag view and creating

--- a/django_project/hub/templates/hub/manage.html
+++ b/django_project/hub/templates/hub/manage.html
@@ -48,4 +48,13 @@
 </a>
 
 
+<a  href="tag">
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Tag</h5>
+    </div>
+</div>
+</a>
+
+
 {% endblock %}
