got the codes of the warehouse model working and a bunch of views

--- a/django_project/hub/templates/hub/manage.html
+++ b/django_project/hub/templates/hub/manage.html
@@ -11,8 +11,7 @@
 </a>
 
 
-
-<a  href="location">
+<a  href="warehouse">
 <div class="card" style="width: 18rem;" >
     <div class="card-body">
         <h5 class="card-title">Wahrenhäuser</h5>
@@ -21,7 +20,7 @@
 </a>
 
 
-<a  href="location">
+<a  href="storage">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Lager</h5>
@@ -29,6 +28,21 @@
 </div>
 </a>
 
+<a  href="shelf">
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Regale</h5>
+    </div>
+</div>
+</a>
+
+<a  href="compartment">
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Faecher</h5>
+    </div>
+</div>
+</a>
 
 <a  href="part">
 <div class="card" style="width: 18rem;">
@@ -39,19 +53,10 @@
 </a>
 
 
-<a  href="location">
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">Geräte</h5>
-    </div>
-</div>
-</a>
-
-
 <a  href="tag">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
-        <h5 class="card-title">Tag</h5>
+        <h5 class="card-title">Tags</h5>
     </div>
 </div>
 </a>
