--- a/django_project/warehouse/templates/warehouse/storage.html
+++ b/django_project/warehouse/templates/warehouse/storage.html
@@ -16,7 +16,7 @@
 
 {% include "hub/modal_button/plus.html" with name="storage" %}
 
-{% include "hub/form_modal.html" with add="Lagereinheit Hinzufügen" action="/manage/" name="storage" m_form=form %}
+{% include "hub/form_modal.html" with add="Lagereinheit Hinzufügen" action="/manage/" name="storage" forms=form %}
 
 {% endblock %}
 
