--- a/django_project/warehouse/templates/warehouse/warehouse.html
+++ b/django_project/warehouse/templates/warehouse/warehouse.html
@@ -16,7 +16,7 @@
 
 {% include "hub/modal_button/plus.html" with name="warehouse" %}
 
-{% include "hub/form_modal.html" with add="Lager Hinzufügen" action="/manage/" name="warehouse" m_form=form %}
+{% include "hub/form_modal.html" with add="Lager Hinzufügen" action="/manage/" name="warehouse" forms=form %}
 
 {% endblock %}
 
