--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="{% static 'hub/bootstrap/css/bootstrap.min.css' %}">
         <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'hub/jquery/jquery-3.6.1.min.js' %}"></script>
+        <script src="{% static 'hub/qrcodescanner/html5-qrcode.min.js' %}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
