--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -1,8 +1,21 @@
 {% extends "hub/header.html" %}
+{% load static %}
 
 {% block content %}
+<div class="row p-3">
 
+    {% for l in fields %}
+    
+        <div class="col-6 col-sm-4 p-2">
+            <div class="card p-2 justify-content-between align-items-center ">
+                <div class"=card-body ">
+                    <img style="width:100" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
+                </div>
+            </div>
+        </div> 
 
+    {% endfor %}
 
+</div>
 
 {% endblock %}
