--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -16,6 +16,10 @@
                 </button>
 
                 <div class="offcanvas offcanvas-start" id="navbarScroll">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"></h5>
+                    <button type="button" class="btn-close position-relativ top-0 end-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav text-right">
                         <a class="nav-link" href="#">Link</a>
