--- a/django_project/part/templates/part/part.html
+++ b/django_project/part/templates/part/part.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-
-
+{% include "hub/modules/search.html" with type="part" %}
 
 {% include "hub/modal_button/plus.html" with name="part" %}
 
