--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -1,10 +1,9 @@
 <html>
     <head>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'hub/bootstrap/css/bootstrap.min.css' %}">
-        <script src="{% static 'hub/bootstrap/js/popper.min.js' %}"></script>
-        <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'hub/jquery/jquery-3.6.1.min.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'hub/bootstrap/css/bootstrap.min.css' %}">
+        <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'hub/qrcodescanner/html5-qrcode.min.js' %}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -28,7 +27,11 @@
                 </div>
 
                 <a class="navbar-brand" href="#">
+                    {% if symbol == None %}
+                    <img style="width:100" src="{% static 'hub/SVG/Logo.svg' %}">
+                    {% else %}
                     <img style="width:100" src="{% static 'hub/SVG/'|add:symbol|add:'.svg' %}">
+                    {% endif %}
                 </a>
                 
                 <button class="btn btn-outline-primary"> 
