--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -7,11 +7,14 @@
     {% for l in fields %}
     
         <div class="col-6 col-sm-4 p-2">
-            <div class="card p-2 justify-content-between align-items-center ">
-                <div class"=card-body ">
-                    <img style="width:100" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
+
+            <a class="card-block text-decorations-none" href="{{l|lower}}">
+                <div class="card p-2 justify-content-between align-items-center">
+                    <div class"=card-body ">
+                        <img style="width:100" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
+                    </div>
                 </div>
-            </div>
+            </a>
         </div> 
 
     {% endfor %}
