--- a/django_project/warehouse/templates/warehouse/compartment.html
+++ b/django_project/warehouse/templates/warehouse/compartment.html
@@ -1,16 +1,8 @@
 {% extends "hub/list_view.html" %}
 
 {% block cards %}
-{% for part in list %}
-<div class="container overflow-hidden">
-    <div class="card">
-        <div class="card-body">
 
-            <p class="card-text">
-                {{part}}
-            </p>
-        </div>
-    </div>
-</div>
+{% include "hub/modules/search.html" with type="shelf" %}
 
+{% endblock  %}
 
