--- a/django_project/warehouse/templates/warehouse/shelf.html
+++ b/django_project/warehouse/templates/warehouse/shelf.html
@@ -2,18 +2,8 @@
 {% extends "hub/header.html" %}
 
 {% block content %}
-{% for part in list %}
-<div class="container overflow-hidden">
-    <div class="card">
-        <div class="card-body">
 
-            <p class="card-text">
-                {{part.traditional_city}}
-            </p>
-        </div>
-    </div>
-</div>
-{% endfor %}
+{% include "hub/modules/search.html" with type="shelf" %}
 
 {% include "hub/modal_button/plus.html" with name="shelf" %}
 
