--- a/django_project/warehouse/templates/warehouse/storage.html
+++ b/django_project/warehouse/templates/warehouse/storage.html
@@ -1,18 +1,8 @@
 {% extends "hub/header.html" %}
 
 {% block content %}
-{% for part in list %}
-<div class="container overflow-hidden">
-    <div class="card">
-        <div class="card-body">
 
-            <p class="card-text">
-                {{part.prefix}}
-            </p>
-        </div>
-    </div>
-</div>
-{% endfor %}
+{% include "hub/modules/search.html" with type="storage" %}
 
 {% include "hub/modal_button/plus.html" with name="storage" %}
 
