--- a/django_project/hub/templates/hub/form_modal.html
+++ b/django_project/hub/templates/hub/form_modal.html
@@ -1,49 +1,42 @@
 <div class="modal fade" id="add{{ name }}" tabindex="-1" aria-labelledby="add{{name}}" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
+
             <div class="modal-header">
-                <h5 class="modal-title" id="addLocationLabel">{{ add }}</h5>
+                <h5 class="modal-title" id="addLocationLabel">{{ title }}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+
             <div class="modal-body">
-{% for tab in forms %}
-    {% if forms|length > 1 %}
-        {% if forloop.first %}
-                <div class="accordion" id="accordionExample">
-        {% endif %}
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading{{ forloop.counter }}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapse{{ forloop.counter }}">
-                                #{{forloop.counter}}
-                            </button>
-                        </h2>
-                    <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse " aria-labelledby="heading{{ forloop.conter }}" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="accordion" id="accordionExample">
-    {% endif %}
-                                <form method="POST" action="{{name}}">
-                            {% csrf_token %}
-                            
-    {% for p_form in tab %}
-        {% for field in p_form %}
-                                    <div class="form-floating mb-3">
-                                        {{ field.error }}
-                                        {{ field }}
-                                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                                    </div>
-        {% endfor %}
-    {% endfor %}
-                                    <button type="submit" class="btn btn-success" name="add_{{ forloop.counter }}">Hinzufügen</button>
-                                </form>
-    {% if forms|length > 1 %}
+
+                <form method="POST" action="{{name}}">
+                    {% csrf_token %}
+
+                    {% for p_form in form %}
+                        {% for field in p_form %}
+                        
+                        {% for f in l %}
+                        {% if field.name == f %}
+                            <div class="form-floating mb-2">
+                                {{ field.error }}
+                                {{ field }}
+                                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                             </div>
-                        </div>
-                    </div>
-        {% if forloop.last %}
-                </div>
-        {% endif %}
-    {% endif %}
-{% endfor %}
+                        {% endif %}
+                        {% endfor %}
+
+                        {% if not typ %}
+                            <div class="form-floating mb-2">
+                                {{ field.error }}
+                                {{ field }}
+                                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                            </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endfor %}
+                    <button type="submit" class="btn btn-success" name="add_{{ forloop.counter }}">Hinzufügen</button>
+                </form>
+
             </div>
         </div>
     </div>
