--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -5,7 +5,23 @@
 <div class="row p-3">
 
     {% for l in fields %}
-    
+
+        {% if l == "Part" %}
+
+        {% for t in type %}
+        <div class="col-6 col-sm-4 p-2">
+
+            <a class="card-block text-decorations-none" href="part/{{t.tName|lower}}">
+                <div class="card p-2 justify-content-between align-items-center">
+                    <div class"=card-body ">
+                        <img style="width:100" src="{% static 'hub/SVG/'|add:t.tSymbol|add:'.svg' %}">
+                    </div>
+                </div>
+            </a>
+        </div> 
+
+        {% endfor %}
+        {% else %}
         <div class="col-6 col-sm-4 p-2">
 
             <a class="card-block text-decorations-none" href="{{l|lower}}">
@@ -16,7 +32,7 @@
                 </div>
             </a>
         </div> 
-
+        {% endif %}
     {% endfor %}
 
 </div>
