--- a/django_project/hub/templates/hub/modules/scanner.html
+++ b/django_project/hub/templates/hub/modules/scanner.html
@@ -12,14 +12,16 @@
 <script>
     function onScanSuccess(decodedText, decodedResult) {
         // Handle on success condition with the decoded text or result.
-        console.log(`Scan result: ${decodedText}`, decodedResult);
+        //console.log(`Scan result: ${decodedText}`, decodedResult);
         if(decodedResult.result.format.formatName == "QR_CODE"){
             if(decodedText.length == 16){
                 {% if input == ""  %}
                 $("#last-scann").val(decodedText);
                 {% else %}
+                if(decodedText !=  $("#{{input}}").val()){
                 $("#{{input}}").val(decodedText);
-                lResults(decodedText)
+                lResults(decodedText);
+                }
                 {% endif %}
             }
         }
