--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         {% load static %}
@@ -28,9 +29,9 @@
 
                 <a class="navbar-brand" href="#">
                     {% if symbol == None %}
-                    <img style="width:100" src="{% static 'hub/SVG/Logo.svg' %}">
+                    <img style="width:100px" src="{% static 'hub/SVG/Logo.svg' %}">
                     {% else %}
-                    <img style="width:100" src="{% static 'hub/SVG/'|add:symbol|add:'.svg' %}">
+                    <img style="width:100px" src="{% static 'hub/SVG/'|add:symbol|add:'.svg' %}">
                     {% endif %}
                 </a>
                 
