--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -14,7 +14,7 @@
             <a class="card-block text-decorations-none" href="part/{{t.tName|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100" src="{% static 'hub/SVG/'|add:t.tSymbol|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.tSymbol|add:'.svg' %}">
                     </div>
                 </div>
             </a>
@@ -27,7 +27,7 @@
             <a class="card-block text-decorations-none" href="{{l|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
                     </div>
                 </div>
             </a>
