made the scanner hidable

--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -5,11 +5,15 @@
 <div class="d-flex p-2">
     <div class="input-group">
         <input id={{searchFieldName}} placeholder="Suche" class="form-control">
-
-        {% include "hub/modules/scanner.html" with input=searchFieldName %}
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-bs-target
+  </button>
 
     </div>
 </div>
+        <div class="collapse" id="collapseExample">
+            {% include "hub/modules/scanner.html" with input=searchFieldName %}
+        </div>
 
 <!-- ____________________________Result Table______________________________________ -->
 
