cleand and refactored the html files

--- a/django_project/part/templates/part/parts.html
+++ b/django_project/part/templates/part/parts.html
@@ -4,8 +4,8 @@
 
 {% include "hub/modules/search.html" %}
 
-{% include "hub/modal_button/plus.html" %}
+{% include "hub/modules/plus.html" %}
 
-{% include "hub/form_modal.html" with typ=typ %}
+{% include "hub/modules/form_modal.html" with typ=typ %}
 
 {% endblock %}
