--- a/django_project/part/templates/part/tag.html
+++ b/django_project/part/templates/part/tag.html
@@ -5,8 +5,8 @@
 
 
 
-{% include "hub/modal_button/plus.html" with name="tag" %}
+{% include "hub/modules/plus.html" with name="tag" %}
 
-{% include "hub/form_modal.html" with add="Tag Hinzufügen" action="/manage/" name="tag" forms=form %}
+{% include "hub/modules/form_modal.html" with add="Tag Hinzufügen" action="/manage/" name="tag" forms=form %}
 
 {% endblock %}
