--- a/django_project/warehouse/templates/warehouse/storages.html
+++ b/django_project/warehouse/templates/warehouse/storages.html
@@ -4,9 +4,9 @@
 
 {% include "hub/modules/search.html" with type="storage" %}
 
-{% include "hub/modal_button/plus.html" with name="storage" %}
+{% include "hub/modules/plus.html" with name="storage" %}
 
-{% include "hub/form_modal.html" with add="Lagereinheit Hinzufügen" action="/manage/" name="storage" forms=form %}
+{% include "hub/modules/form_modal.html" with add="Lagereinheit Hinzufügen" action="/manage/" name="storage" forms=form %}
 
 {% endblock %}
 
