--- a/django_project/warehouse/templates/warehouse/warehouses.html
+++ b/django_project/warehouse/templates/warehouse/warehouses.html
@@ -4,9 +4,9 @@
 
 {% include "hub/modules/search.html" with type="warehouse" %}
 
-{% include "hub/modal_button/plus.html" with name="warehouse" %}
+{% include "hub/modules/plus.html" with name="warehouse" %}
 
-{% include "hub/form_modal.html" with add="Lager Hinzufügen" action="/manage/" name="warehouse" forms=form %}
+{% include "hub/modules/form_modal.html" with add="Lager Hinzufügen" action="/manage/" name="warehouse" forms=form %}
 
 {% endblock %}
 
