--- a/django_project/hub/templates/hub/locations.html
+++ b/django_project/hub/templates/hub/locations.html
@@ -4,9 +4,9 @@
 
 {% include "hub/modules/search.html" with type="location" %}
 
-{% include "hub/modal_button/plus.html" with name="location" %}
+{% include "hub/modules/plus.html" with name="location" %}
 
-{% include "hub/form_modal.html" with add="Standort Hinzufügen" action="" name="location" forms=form %}
+{% include "hub/modules/form_modal.html" with add="Standort Hinzufügen" action="" name="location" forms=form %}
 
 {% endblock %}
 
