--- a/django_project/part/templates/part/modules/part.html
+++ b/django_project/part/templates/part/modules/part.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-{% include "part/modules/partFields.html" %}
+{% include "part/modules/partIncert.html" %}
 
 {% endblock %}
