--- a/django_project/part/templates/part/modules/partIncert.html
+++ b/django_project/part/templates/part/modules/partIncert.html
@@ -1,5 +1,4 @@
 <h1> {{ part.template.name }} </h1>
-
 <form method="POST" action="{{name}}">
     {% csrf_token %}
 
@@ -16,6 +15,15 @@
         {% endif %}
         {% endfor %}
 
+
+
+        {% if not typ %}
+            <div class="form-floating mb-2">
+                {{ field.error }}
+                {{ field }}
+                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+            </div>
+            {% endif %}
         {% endfor %}
     {% endfor %}
     {% if add %}
