--- a/django_project/hub/templates/hub/modules/form_modal.html
+++ b/django_project/hub/templates/hub/modules/form_modal.html
@@ -34,7 +34,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
-                    <button type="submit" class="btn btn-success" name="add_{{ forloop.counter }}">Hinzufügen</button>
+                    <button type="submit" class="btn btn-success" name="add_{{ forloop.counter }}">Add</button>
                 </form>
 
             </div>
