--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -2,7 +2,7 @@
         <tr>
 
             <td>
-                <input class="form-check-input checkboxlist" type="checkbox" value="" id="{{ r.id }}">
+                <input class="form-check-input checkboxlist" type="checkbox" value="{{r}}" id="{{ r.id }}">
             </td>
 
             {% if type == "part" %}
